--- a/checkout/cart/api-reference/api.yml
+++ b/checkout/cart/api-reference/api.yml
@@ -897,7 +897,7 @@ paths:
             **Note**: The query param is optional, but if not provided then only cart without `type` is returned.
         - name: zipCode
           in: query
-          description: Zip code for cart filtering
+          description: The zip code of the shipping address, used for tax calculations, shipping cost estimations, and pricing. Must be provided together with `countryCode` if either parameter is specified. If the cart already has both address values, request parameters are ignored. If the cart is missing either value, request parameters fill the missing values.
           required: false
           schema:
             type: string
@@ -905,7 +905,7 @@ paths:
             maxLength: 9
         - name: countryCode
           in: query
-          description: Country code for cart filtering
+          description: The country code of the shipping address, used for tax calculations, shipping cost estimations, and pricing Must be provided together with `zipCode` if either parameter is specified. If the cart already has both address values, request parameters are ignored. If the cart is missing either value, request parameters fill the missing values.
           required: false
           schema:
             type: string
@@ -2345,7 +2345,7 @@ paths:
           description: 'If set to `true`, a fully calculated cart is returned.'
         - name: zipCode
           in: query
-          description: Zip code for cart filtering
+          description: The zip code of the shipping address, used for tax calculations, shipping cost estimations, and pricing. Must be provided together with `countryCode` if either parameter is specified. If the cart already has both address values, request parameters are ignored. If the cart is missing either value, request parameters fill the missing values.
           required: false
           schema:
             type: string
@@ -2353,7 +2353,7 @@ paths:
             maxLength: 9
         - name: countryCode
           in: query
-          description: Country code for cart filtering
+          description: The country code of the shipping address, used for tax calculations, shipping cost estimations, and pricing Must be provided together with `zipCode` if either parameter is specified. If the cart already has both address values, request parameters are ignored. If the cart is missing either value, request parameters fill the missing values.
           required: false
           schema:
             type: string
