COP-3716 create first part of AI agentic changelog

--- a/artificial-intelligence/ai-service/api-reference/api.yml
+++ b/artificial-intelligence/ai-service/api-reference/api.yml
@@ -551,7 +551,7 @@ paths:
       - $ref: '#/components/parameters/fields'
       - $ref: '#/components/parameters/header_xTotalCount'
     get:
-      summary: Get generic agents
+      summary: Get agents
       operationId: GET-ai-list-agents
       responses:
         '200':
@@ -593,7 +593,7 @@ paths:
         - $ref: '#/components/parameters/sort'
         - $ref: '#/components/parameters/fields'
         - $ref: '#/components/parameters/header_xTotalCount'
-      summary: Get generic agents
+      summary: Get agents
       operationId: POST-ai-search-agents
       responses:
         '200':
@@ -638,7 +638,7 @@ paths:
     get:
       parameters:
         - $ref: '#/components/parameters/header_Accept-Language'
-      summary: Get generic agent by Id
+      summary: Get agent by Id
       operationId: GET-ai-retrieve-agent
       responses:
         '200':
@@ -673,8 +673,8 @@ paths:
     put:
       parameters:
         - $ref: '#/components/parameters/header_Content-Language'
-      summary: Upsert generic agents
-      operationId: PUT-ai-list-agents
+      summary: Upsert agents
+      operationId: PUT-ai-upsert-agent
       responses:
         '201':
           description: Id of created agent
@@ -713,7 +713,7 @@ paths:
       tags:
         - Agentic
     patch:
-      summary: Partially update generic agent
+      summary: Partially update agent
       operationId: PATCH-ai-update-agent
       responses:
         '204':
@@ -745,7 +745,7 @@ paths:
       tags:
         - Agentic
     delete:
-      summary: Delete generic agent
+      summary: Delete agent
       operationId: DELETE-ai-delete-agent
       responses:
         '204':
